crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__state__test__forget.snap
---
source: crates/oxvg_actions/src/actions/state.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100"/>
