crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__state__test__last_child.snap
---
source: crates/oxvg_actions/src/actions/state.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><one/><two/><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>svg</oxvg:arg></oxvg:action><oxvg:action oxvg:id="LastChild"/></oxvg:history><oxvg:selection oxvg:ids="3"/></oxvg:state></svg>
