crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__state__test__parent-2.snap
---
source: crates/oxvg_actions/src/actions/state.rs
expression: actor.derive_state().unwrap()
---
DerivedState {
    history: [
        Select(
            Cow(
                "one",
            ),
        ),
        Parent,
    ],
    selection: [
        1,
    ],
    info: Some(
        Info {
            element_id: Some(
                Svg,
            ),
            content_model: ContentModel {
                permitted_categories: ElementCategory(
                    Animation | BasicShape | Container | Descriptive | FilterPrimitive | Gradient | Graphics | GraphicsReferencing | LightSource | NeverRendered | PaintServer | Renderable | Shape | Structural | StructurallyExternal | TextContent | TextContentChild | TransferFunction | Uncategorised,
                ),
                permitted_elements: {
                    A,
                    AltGlyphDef,
                    ClipPath,
                    ColorProfile,
                    Cursor,
                    Filter,
                    Font,
                    FontFace,
                    ForeignObject,
                    Image,
                    Marker,
                    Mask,
                    Pattern,
                    Script,
                    Style,
                    Switch,
                    Text,
                    View,
                },
            },
            attributes: AttrModel {
                expected_attribute_groups: AttributeGroup(
                    AnimationAddition | AnimationAttributeTarget | AnimationEvent | AnimationTargetElement | AnimationTiming | AnimationValue | Aria | ConditionalProcessing | Core | DocumentEvent | DocumentElementEvent | FilterPrimitive | GraphicalEvent | GlobalEvent | Presentation | TransferFunction | XLink,
                ),
                expected_attributes: {
                    BaseProfile,
                    ContentScriptType,
                    ContentStyleType,
                    ExternalResourcesRequired,
                    HeightSvg,
                    Playbackorder,
                    PreserveAspectRatio,
                    Timelinebegin,
                    Version,
                    ViewBox,
                    WidthSvg,
                    XGeometry,
                    YGeometry,
                    ZoomAndPan,
                },
                values: {
                    XMLNS: Cow(
                        "http://www.w3.org/2000/svg",
                    ),
                    Unknown(
                        QualName {
                            prefix: XMLNS,
                            local: Cow(
                                "oxvg",
                            ),
                        },
                    ): Cow(
                        "https://oxvg.noahwbaldwin.me",
                    ),
                },
            },
            text: None,
        },
    ),
    ui: None,
}
