crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__state__test__parent.snap
---
source: crates/oxvg_actions/src/actions/state.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><one/><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>one</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Parent"/></oxvg:history><oxvg:selection oxvg:ids="1"/></oxvg:state></svg>
